RESOLVED FIXED156241
REGRESSION (r188591): thingiverse.com direct messaging UI is not rendered properly
https://bugs.webkit.org/show_bug.cgi?id=156241
Summary REGRESSION (r188591): thingiverse.com direct messaging UI is not rendered pro...
Myles C. Maxfield
Reported 2016-04-05 10:48:46 PDT
REGRESSION (r188591): thingiverse.com direct messaging UI is not rendered properly
Attachments
Patch (7.48 KB, patch)
2016-04-05 10:52 PDT, Myles C. Maxfield
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (708.37 KB, application/zip)
2016-04-05 11:44 PDT, Build Bot
no flags
Patch (10.87 KB, patch)
2016-04-05 15:05 PDT, Myles C. Maxfield
no flags
Patch (4.55 KB, patch)
2016-04-06 19:02 PDT, Myles C. Maxfield
simon.fraser: review+
Myles C. Maxfield
Comment 1 2016-04-05 10:52:51 PDT
Build Bot
Comment 2 2016-04-05 11:44:45 PDT
Comment on attachment 275674 [details] Patch Attachment 275674 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1104755 New failing tests: fast/text/zero-sized-fonts.html
Build Bot
Comment 3 2016-04-05 11:44:48 PDT
Created attachment 275680 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.10.5
Myles C. Maxfield
Comment 4 2016-04-05 15:05:46 PDT
Myles C. Maxfield
Comment 5 2016-04-06 18:50:21 PDT
Comment on attachment 275699 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=275699&action=review This > Source/WebCore/ChangeLog:9 > + text-rendering: optimizeLegibility enables optical sizing. When using an optical Font::platformWidthForGlyph() is the place that changed in r188591 and needs to be updated.
Myles C. Maxfield
Comment 6 2016-04-06 19:02:05 PDT
Myles C. Maxfield
Comment 7 2016-04-06 22:19:59 PDT
Jon Lee
Comment 8 2016-04-06 23:33:34 PDT
Note You need to log in before you can comment on or make changes to this bug.