REGRESSION (r188591): thingiverse.com direct messaging UI is not rendered properly https://bugs.webkit.org/show_bug.cgi?id=156241 <rdar://problem/25262213>

Reviewed by Simon Fraser.

Source/WebCore:

When creating a CoreText font with a size of 0, the CoreText docs say that it will
interpret this as a missing argument, and create a font of size 12 instead. However,
this doesn't cause a problem (at least on this particular website) because we will
use CGFontGetGlyphAdvancesForStyle(), which gets scaled by the supplied font
size (which is 0). However, if you turn on text-rendering: optimizeLegibility, we
will use CTFontGetAdvancesForGlyphs() instead, which does not scale by the font size.
The solution is to detect this case, and force the advance to 0.

Test: fast/text/zero-sized-fonts.html

* platform/graphics/cocoa/FontCocoa.mm:
(WebCore::Font::platformWidthForGlyph):

LayoutTests:

* fast/text/zero-sized-fonts-expected.txt: Added.
* fast/text/zero-sized-fonts.html: Added.

Canonical link: https://commits.webkit.org/174419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199150 268f45cc-cd09-0410-ab3c-d52691b4dbfc